Refactor MCPResourceDescriptor